# exact

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  EraseWorst.sh  Island_selection_sample.sh  Meeting Notes.md  README.md  acnnto_mt.cxx  bottle.sh  cluster_run.sh  cluster_test.sh  coal_mt.sh  coal_mt_resn.sh  coal_train_resn_binary.sh  control.sh  copy_binary_linux.sh  copy_binary_osx.sh  copy_binary_windows.sh  dnas_cluster.zsh  dnas_control.zsh  format.sh  get_mse_examm.py  get_times.py  key  main_out  mk_bottle.sh  plan.md  rng_test.cxx  run.sh  run_enarc_nlp.sh  run_lstm_nlp.sh  run_script.bash  sample_script.sh  slurm.sh  test_arch.sh  test_mpi.sh  test_mt.sh  thompson_c172.sh  thompson_pa28.sh  (+3 more)
client/: CMakeLists.txt  client.cxx
cnn/: CMakeLists.txt  cnn_edge.cxx  cnn_edge.hxx  cnn_genome.cxx  cnn_genome.hxx  cnn_node.cxx  cnn_node.hxx  comparison.cxx  comparison.hxx  exact.cxx  exact.hxx  pooling.cxx  pooling.hxx  propagation.cxx  propagation.hxx
cnn_examples/: CMakeLists.txt  apply_cnn.cxx  apply_cnn_to_mosaic.cxx  apply_cnn_to_mosaic_db.cxx  evaluate_cnn.cxx  evaluate_large_image_cnn.cxx  large_image_lenet.cxx  large_image_lenet_new.cxx  lenet.cxx  lenet_no_pool.cxx  one_layer.cxx  two_layer.cxx
cnn_tests/: CMakeLists.txt  check_gradients.cxx  evaluate_population.cxx  exp_test.cxx  export_genome.cxx  generate_gv.cxx  hex_test.cxx  retrain_cnn.cxx  rng_test.cxx  test_checkpoint.cxx  test_genome_database_export.cxx
common/: CMakeLists.txt  archipelago_config.cxx  archipelago_config.hxx  archipelago_config_test.cxx  args.cxx  args.hxx  arguments.cxx  arguments.hxx  color_table.cxx  color_table.hxx  dataset_meta.cxx  dataset_meta.hxx  db_conn.cxx  db_conn.hxx  examm_argparse.cxx  exp.cxx  exp.hxx  files.cxx  files.hxx  log.cxx  log.hxx  process_arguments.cxx  process_arguments.hxx  random.cxx  random.hxx  string_format.hxx  truncated_normal.cpp  truncated_normal.hpp  version.hxx  weight_initialize.hxx  weight_update.cxx  weight_update.hxx
image_tools/: CMakeLists.txt  convert_cifar10_data.cxx  convert_mnist_data.cxx  create_training_data.cxx  image_resizer.cxx  image_set.cxx  image_set.hxx  image_set_interface.hxx  image_splitter.cxx  large_image_set.cxx  large_image_set.hxx  mosaic_image_set.cxx  mosaic_image_set.hxx  split_mnist_data.cxx  visualize_conv_layers.cxx  visualize_conv_net.cxx
mpi/: CMakeLists.txt  acnnto_mpi.cxx  acnnto_mpi_multi.cxx  evostar_tests.cxx  exact_mpi.cxx  exalt_mpi.cxx  exalt_mpi_multi.cxx  examm_archipelago_mpi.cxx  examm_mpi.cxx  examm_mpi_core.cxx  examm_mpi_multi.cxx  examm_mpi_nlp.cxx  examm_mpi_stress_test.cxx  onenet_mpi.cxx  process_sweep_results.cxx  read  read_colony_binary.cxx  read_colony_binary.py  rnn_kfold_sweep.cxx  run_statistics.cxx  run_statistics.hxx  test_ant_march.cpp  test_stream_write.cxx  tracker.cxx  tracker.hxx
multithreaded/: CMakeLists.txt  acnnto_mt.cxx  exact_mt.cxx  exalt_mt.cxx  exalt_mt_single_series.cxx  examm_mt.cxx  examm_mt_core.cxx  examm_mt_nlp.cxx  examm_mt_single_series.cxx  examm_nlp.cxx  examm_nlp_mt.cxx
rnn/: .generate_nn.cxx.swp  .inverse_node_gp.cxx.swp  .multiply_node_gp.cxx.swp  .rnn_genome.cxx.swp  .rnn_genome.hxx.swp  .rnn_node_interface.hxx.swp  CMakeLists.txt  a.out  acnnto.cxx  acnnto.hxx  ant_colony.cxx  ant_colony.hxx  archipelago_node.cxx  archipelago_node.hxx  argparse.cxx  beta_thompson_sampling.cxx  beta_thompson_sampling.hxx  bptt.cxx  bptt.hxx  cos_node.cxx  cos_node.hxx  cos_node_gp.cxx  cos_node_gp.hxx  dataset_meta.cxx  dataset_meta.hxx  delta_node.cxx  delta_node.hxx  distribution.hxx  distributions.cxx  distributions.hxx  dnas_node.cxx  dnas_node.hxx  edge_pheromone.cxx  edge_pheromone.hxx  enarc_node.cxx  enarc_node.hxx  enas_dag_node.cxx  enas_dag_node.hxx  exalt.cxx  exalt.hxx  (+98 more)
rnn_examples/: CMakeLists.txt  dnas_info.cxx  evaluate_rnn.cxx  evaluate_rnn_multi_step.cxx  evaluate_rnns_multi_offset.cxx  evostar_tests.cxx  jordan_rnn.cxx  one_layer_lstm.cxx  one_node_lstm.cxx  online_rnn.cxx  rnn_heatmap.cxx  rnn_statistics.cxx  train_rnn.cxx  two_layer_lstm.cxx
rnn_tests/: .test_feed_forward_gradients.cxx.swp  CMakeLists.txt  gradient_test.cxx  gradient_test.hxx  test_cos_gp_gradients.cxx  test_cos_gradients.cxx  test_delta_gradients.cxx  test_dnas_gradients.cxx  test_elman_gradients.cxx  test_enarc_gradients.cxx  test_enas_dag_gradients.cxx  test_feed_forward_gradients.cxx  test_get_equations.cxx  test_gru_gradients.cxx  test_inverse_gp_gradients.cxx  test_inverse_gradients.cxx  test_jordan_gradients.cxx  test_lstm_gradients.cxx  test_mgu_gradients.cxx  test_multiply_gp_gradients.cxx  test_multiply_gradients.cxx  test_node_to_binary.cxx  test_random_dag_gradients.cxx  test_rnn.cxx  test_sigmoid_gp_gradients.cxx  test_sigmoid_gradients.cxx  test_sin_gp_gradients.cxx  test_sin_gradients.cxx  test_softmax_gradient.cxx  test_softmax_output.cxx  test_sum_gp_gradients.cxx  test_sum_gradients.cxx  test_tanh_gp_gradients.cxx  test_tanh_gradients.cxx  test_ugrnn_gradients.cxx
server/: CMakeLists.txt  README.txt  boinc_common.cxx  exact_assimilation_policy.cxx  exact_validation_policy.cxx  exact_work_generator.cxx  make_jobs.cxx  make_jobs.hxx  server.cxx
strategic/: CMakeLists.txt  bandit.hxx  bandit_state.cxx  bandit_strategy.cxx  bandit_strategy.hxx  evaluate_bandit_strategy.cxx  evaluate_strategy.cxx  forecaster.cxx  forecaster.hxx  linucb.cxx  oracle.cxx  oracle.hxx  portfolio.cxx  portfolio.hxx  portfolio_oracle.cxx  portfolio_oracle.hxx  simple_stock_strategy.cxx  simple_stock_strategy.hxx  state.cxx  state.hxx  strategy.cxx  strategy.hxx  trivial_forecaster.cxx  trivial_forecaster.hxx  ucb.cxx
strategy/: '  CMakeLists.txt  cnn_edge.cxx  cnn_edge.hxx  cnn_genome.cxx  cnn_genome.hxx  cnn_neat.hxx  cnn_node.cxx  cnn_node.hxx  comparison.cxx  comparison.hxx  exact.cxx  exact.hxx  pooling.cxx  pooling.hxx  propagation.cxx  propagation.hxx
tests/: CMakeLists.txt  edge.cxx  edge.hxx  evaluate_cnn.cxx  evaluate_large_image_cnn.cxx  evaluate_population.cxx  exp_test.cxx  export_genome.cxx  generate_gv.cxx  hex_test.cxx  large_image_lenet.cxx  lenet.cxx  node.cxx  (+11 more)
(+2724 files in other folders)
